<resources>
    <string name="app_name">Balenciaga</string>
    <string name="company_name">Balenciaga</string>
    <string name="women">Women</string>
    <string name="all">All</string>
    <string name="men">Men</string>
    <string name="search">SEARCH</string>
    <string name="backArrowDescription">Back Arrow Icon</string>
    <string name="bagIconDescription">Bag Icon</string>
    <string name="customerServiceIconDescription">Customer Service Icon</string>
    <string name="menuIconDescription">Menu Icon</string>
    <string name="searchIconDescription">Search Icon</string>
    <string name="placeholder">PLACEHOLDER</string>
    <!-- Category Fragment -->
    <string name="back">Back</string>
    <string name="newArrivals">New Arrivals</string>
    <string name="smallLeatherGoods">Small Leather Goods</string>
    <string name="bags">Bags</string>
    <string name="miniBags">Mini Bags</string>
    <string name="sneakers">Sneakers</string>
    <string name="shoes">Shoes</string>
    <string name="readyToWear">Ready to Wear</string>
    <string name="accessories">Accessories</string>
    <string name="kids">Kids</string>
    <string name="collections">Collections</string>
    <string name="previousSeasons">Previous Seasons</string>
    <!-- Product List Fragment -->
    <string name="productListPrice">$%1$.2f</string>
    <string name="productListImage">\@drawable/_%1$s_a.jpg</string>
    <!-- Filter Fragment -->
    <string name="filter">Filter</string>
    <!-- Product View -->
    <string name="productImage">Product Image</string>
    <!-- Product Details Fragment -->
    <string name="addToBag">Add to Bag</string>
    <string name="shippingAndReturn">Shipping &amp; Return</string>
    <string name="storeAvailability">Store Availability</string>
    <string name="productDetails">Product Details</string>
    <string name="dimensions">Dimensions: %1$s</string>
    <string name="composition">Composition: %1$s</string>
    <string name="productID">Product ID: %1$s</string>
</resources>