<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_bottom"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_weight="1"
        style="@style/logo" />

    <ImageView
        android:id="@+id/bagIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bag"
        android:contentDescription="@string/bagIconDescription"
        android:visibility="invisible"
        style="@style/navIcons" />

    <ImageView
        android:id="@+id/questionIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/help"
        android:contentDescription="@string/customerServiceIconDescription"
        android:visibility="invisible"
        style="@style/navIcons" />

    <ImageView
        android:id="@+id/menuIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:src="@drawable/menu"
        android:contentDescription="@string/menuIconDescription"
        android:visibility="invisible"
        style="@style/navIcons"
        tools:ignore="RtlSymmetry" />

</LinearLayout>