<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainScreenFragment">

    <TextView
        android:id="@+id/womenTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/women"
        app:layout_constraintBottom_toTopOf="@+id/allTextView"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/mainScreenTextView"/>

    <TextView
        android:id="@+id/allTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/all"
        app:layout_constraintBottom_toTopOf="@+id/menTextView"
        app:layout_constraintTop_toBottomOf="@+id/womenTextView"
        style="@style/mainScreenTextView" />

    <TextView
        android:id="@+id/menTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/men"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allTextView"
        style="@style/mainScreenTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>