<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="mainFragmentHandler"
            type="com.balenciaga.fragments.MainFragmentHandler" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.MainFragment"
        tools:viewBindingIgnore="true" >

        <fragment
            android:id="@+id/searchFragment"
            android:name="com.balenciaga.fragments.SearchFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/womenTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:onClick="@{mainFragmentHandler::navigateToCategoryFragment}"
            android:text="@string/women"
            app:layout_constraintBottom_toTopOf="@id/allTextView"
            app:layout_constraintTop_toBottomOf="@id/searchFragment"
            style="@style/mainTextView"/>

        <TextView
            android:id="@+id/allTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:onClick="@{mainFragmentHandler::navigateToCategoryFragment}"
            android:text="@string/all"
            app:layout_constraintBottom_toTopOf="@id/menTextView"
            app:layout_constraintTop_toBottomOf="@id/womenTextView"
            style="@style/mainTextView" />

        <TextView
            android:id="@+id/menTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:onClick="@{mainFragmentHandler::navigateToCategoryFragment}"
            android:text="@string/men"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/allTextView"
            style="@style/mainTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>